monitoring-v3/grafana/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: monitoring.stefanmuraru.com
spec:
  parentRefs:
    - name: private
      namespace: gateway-system
      sectionName: https
  hostnames:
    - monitoring.stefanmuraru.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana
          port: 3000
